derive/tests/snapshots/qualified_type_spellings/HiddenNote/get_all_hidden_notes.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `hidden_note` table.
    pub fn get_all_hidden_notes<'a>(&'a self) -> impl Iterator<Item = HiddenNote> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().hidden_note().iter()
    }
}
