derive/tests/snapshots/qualified_type_spellings/HiddenNote/get_hidden_note_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `HiddenNote` from the `hidden_note` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_hidden_note_by_id<'a>(
        &'a self,
        id: impl Into<HiddenNoteId> + Clone,
    ) -> Result<HiddenNote, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().hidden_note().id().find(id.clone().into().value()) {
            Some(hidden_note) => Ok(hidden_note),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "hidden_note".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `HiddenNote` from the `hidden_note` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_hidden_note_by_id<'a>(
        &'a self,
        id: impl Into<HiddenNoteId> + Clone,
    ) -> Result<HiddenNote, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().hidden_note().id().find(id.clone().into().value()) {
            Some(hidden_note) => Ok(hidden_note),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "hidden_note".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
