derive/tests/snapshots/qualified_type_spellings/HiddenNote/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct HiddenNoteId {
    value: u64,
}
impl Default for HiddenNoteId {
    fn default() -> HiddenNoteId {
        HiddenNoteId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for HiddenNoteId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "HiddenNoteId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for HiddenNoteId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&HiddenNote> for HiddenNoteId {
    fn from(value: &HiddenNote) -> Self {
        HiddenNoteId {
            value: value.id.clone(),
        }
    }
}
impl From<&HiddenNote> for Option<HiddenNoteId> {
    fn from(value: &HiddenNote) -> Option<HiddenNoteId> {
        Some(HiddenNoteId {
            value: value.id.clone(),
        })
    }
}
impl From<&HiddenNoteId> for Option<HiddenNoteId> {
    fn from(value: &HiddenNoteId) -> Option<HiddenNoteId> {
        use crate::spacetimedsl::Wrapper;
        Some(HiddenNoteId::new(value.value()))
    }
}
impl From<&HiddenNoteId> for HiddenNoteId {
    fn from(value: &HiddenNoteId) -> Self {
        use crate::spacetimedsl::Wrapper;
        HiddenNoteId::new(value.value())
    }
}
impl HiddenNote {
    ///
    pub fn get_id(&self) -> HiddenNoteId {
        use crate::spacetimedsl::Wrapper;
        HiddenNoteId::new(self.id.clone())
    }
    ///
    pub fn get_text(&self) -> &String {
        use crate::spacetimedsl::Wrapper;
        &self.text
    }
    ///
    pub fn get_text_mut(&mut self) -> &mut String {
        use crate::spacetimedsl::Wrapper;
        &mut self.text
    }
    ///
    pub fn set_text(&mut self, text: String) -> String {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.text, text);
        old_value
    }
    ///
    pub fn get_hidden(&self) -> &core::primitive::bool {
        use crate::spacetimedsl::Wrapper;
        &self.hidden
    }
}
///
pub struct CreateHiddenNote {
    pub text: String,
}

// Generated DSL methods:
// count_of_all_hidden_notes
// create_hidden_note
// delete_hidden_note_by_id
// get_all_hidden_notes
// get_hidden_note_by_id
// soft_delete_hidden_note_by_id
// update_hidden_note_by_id
